--- a/results.html
+++ b/results.html
@@ -8,28 +8,28 @@
 
 <h4>Here are the first 5 links on the page:</h4>
 
-<div class ="">
+<div class ="col-sm-12 col-md-8 col-md-gutter">
     <ul class="">
         <!-- For each loop... for each link in links -->
         <li>
-            <a href="{{ info }}{{ links[1] }}">
-            {{ links[1] }}</a> <br/>
+            <a href="http://verisk.com{{ links[76] }}">
+            {{ links[76] }}</a> <br/>
         </li>
         <li>
-            <a href="{{ info }}{{ links[2] }}">
-            {{ links[2] }}</a> <br/>
+            <a href="http://verisk.com{{ links[77] }}">
+            {{ links[77] }}</a> <br/>
         </li>
         <li>
-            <a href="{{ info }}{{ links[3] }}">
-            {{ links[3] }}</a> <br/>
-        </li>
-         <li>
-            <a href="{{ info }}{{ links[4] }}">
-            {{ links[4] }}</a> <br/>
+            <a href="http://verisk.com{{ links[78] }}">
+            {{ links[78] }}</a> <br/>
         </li>
         <li>
-            <a href="{{ info }}{{ links[5] }}">
-            {{ links[5] }}</a> <br/>
+            <a href="http://verisk.com{{ links[79] }}">
+            {{ links[79] }}</a> <br/>
+        </li>
+        <li>
+            <a href="http://verisk.com{{ links[80] }}">
+            {{ links[80] }}</a> <br/>
         </li>
     </ul>
 </div>
